charts/argo-cd/ingress/ingress-argocd.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-ingress
  namespace: argocd
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    spec.ingressClassName: "traefik"
    cert-manager.io/cluster-issuer: "letsencrypt-dev"
spec:
  ingressClassName: traefik
  rules:
  - host: argocd.devops.taipei
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argo-cd-argocd-server
            port:
              number: 443
  tls:
  - hosts:
    - argocd.devops.taipei
    secretName: argocd-tls
